main functionality completed

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=solicitudes.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
+
