Add: JWT, CORS, SEED

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=solicitudes.db"
   },
+  "Jwt": {
+    "Key": "super-secret-key-para-prueba-tecnica",
+    "Issuer": "solicitudes-api",
+    "Audience": "solicitudes-frontend",
+    "ExpiresInMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,4 +15,3 @@
     }
   }
 }
-
